[package]
name = "hyperbro_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pelite = "0.9.0"
utf16string = "0.2.0"
memmem = "0.1.1"
rust-lzxpress = "0.7.1"
clap = "3.0.5"
patternscan = "1.2.0"
regex = "1.5.5"